Dependencies are updated with safe versions, build is fixed